Regression: Simulation/repeat zone overlay is opaque for frame titles #126836
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#126836
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.22
Blender Version
Broken: version: 4.2.1 LTS, branch: blender-v4.2-release, commit date: 2024-08-19 11:21, hash:
396f546c9d82
Worked: 4.1.1
Short description of error
Yes, it was tested with factory settings too.
b4.1, it should work like this:
b4.2, dynamic frame is opaque for frame`s title
Exact steps for others to reproduce the error
Open the file, compare with b4.1 and b4.2 of Blender
Hi, thanks for the report. Can confirm
For me, zone overlay is not visible prior to
b11d8d2e74
Also, it seems there are intentionally made non transparent: !110697
cc @JacquesLucke
What kind of issues appear with transparency? What is «tricky theming?» @JacquesLucke I am sure, majority of users do not try to achieve exact color, they want to achieve eye-pleasant result.
Also it worked, and worked well.
Just for the future.
Idk if you revert to previous version or fixed it.
Old zone with zero alpha looks this:
frames have proper opacity mix and look this:
zone overlay for some reason is always UNDER frame, which is illogical…
@JacquesLucke , should i report it?
Zones used to be drawn behind frames, and that was a bug. The fix for that caused the issue in this bug report. The fix I committed earlier today makes it so that frame labels are always drawn on top so they are not hidden by other zones (or frames for that matter).
The tricky thing is that different kinds of zones have different colors which would mix to all kinds of other colors if they had transparency (especially with nested zones). However, the color is also used to communicate what kind of zone it is, so mixing the zone colors makes that kind of useless.
Okay, that`s reasonable
Oh, I see. I did not think about nested zones. So the border should be opaque, and for zone it is preferable to have alpha noticeably higher than 50% so top color can cover others.
Do you need help with design of this case?