Fix #126836: frame node labels are hidden by zones